--- a/src/components/ImageItem/ImageItem.css
+++ b/src/components/ImageItem/ImageItem.css
@@ -1,13 +1,14 @@
-@import url(./../index.css);
+@import url(./../../index.css);
 
 .image-container {
     position: relative;
     display: inline-block;
+    margin: 2.5px;
   }
   
 .image {
-    width: auto;
-    vertical-align:top;
+    height: 150px;
+    vertical-align: top;
   }
 
 .overlay {
@@ -16,8 +17,6 @@
     bottom: 0;
     left: 0;
     right: 0;
-    width: 100%;
-    height: 100%;
     opacity: 0;
     transition: opacity 0.3s ease;
     background-color: var(--primary-black-66);
