--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,16 @@
   --SMK-green: hsla(75, 26%, 15%, 1);
   --SMK-dark-blue: hsla(228, 54%, 30%, 1);
   --SMK-dusty-blue: hsla(194, 100%, 14%, 1);
+
+  /* Background Color*/
+  --background-color: var(--primary-white);
+}
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+  background-color: var(--background-color);
 }
 
 /* Text Styles */
