--- a/src/components/FrontPageHeading.css
+++ b/src/components/FrontPageHeading.css
@@ -1,31 +1,11 @@
 .heading-container {
-  font-family: "Open Sans";
   margin: 50px 0px 0px 50px;
 }
 
 .h1 {
-  position: absolute;
-  width: 469px;
-  height: 116px;
-  left: 138px;
-  top: 180px;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 48px;
-  line-height: 65px;
-  display: flex;
-  align-items: center;
-  letter-spacing: -0.02em;
+  color: var(--primary-black);
 }
 
 .h2 {
-  position: absolute;
-  width: 383px;
-  height: 106px;
-  left: 138px;
-  top: 304px;
-  font-style: normal;
-  font-weight: 300;
-  font-size: 40px;
-  line-height: 54px;
+  color: var(--primary-black);
 }
