updated dataflow from search screen to full sized painting screen

--- a/src/components/SearchComponent/SearchComponent.css
+++ b/src/components/SearchComponent/SearchComponent.css
@@ -5,7 +5,16 @@
     flex-direction: row;
 }
 
-.scroll-container {
+.image-grid-container-padding {
     margin-left: 50px;
-    margin-top: 20px;
+    margin-top: 100px;
+    width: 1100px;
+}
+
+.sticky-container{
+    position: -webkit-sticky;
+    position: sticky;
+    width: 300px;
+    height: 500px;
+    top: 0;
 }
