--- a/src/index.css
+++ b/src/index.css
@@ -41,7 +41,7 @@ body {
 
 /* Text Styles */
 h1 {
-  font-family: Open Sans;
+  font-family: "Open Sans", "Inter", "Roboto", "Nunito Sans", sans-serif;
   font-size: 48px;
   font-weight: 700;
   line-height: 65px;
@@ -51,7 +51,7 @@ h1 {
 }
 
 h2 {
-  font-family: Open Sans;
+  font-family: "Open Sans", "Inter", "Roboto", "Nunito Sans", sans-serif;
   font-size: 40px;
   font-weight: 300;
   line-height: 54px;
@@ -60,7 +60,7 @@ h2 {
 }
 
 h3 {
-  font-family: Open Sans;
+  font-family: "Open Sans", "Inter", "Roboto", "Nunito Sans", sans-serif;
   font-size: 32px;
   font-weight: 500;
   line-height: 44px;
@@ -70,7 +70,7 @@ h3 {
 }
 
 h4 {
-  font-family: Open Sans;
+  font-family: "Open Sans", "Inter", "Roboto", "Nunito Sans", sans-serif;
   font-size: 20px;
   font-weight: 700;
   line-height: 27px;
@@ -80,7 +80,7 @@ h4 {
 }
 
 h5 {
-  font-family: Open Sans;
+  font-family: "Open Sans", "Inter", "Roboto", "Nunito Sans", sans-serif;
   font-size: 20px;
   font-weight: 500;
   line-height: 27px;
@@ -90,7 +90,7 @@ h5 {
 }
 
 h6 {
-  font-family: Open Sans;
+  font-family: "Open Sans", "Inter", "Roboto", "Nunito Sans", sans-serif;
   font-size: 20px;
   font-weight: 300;
   line-height: 27px;
@@ -99,7 +99,7 @@ h6 {
 }
 
 .label-text {
-  font-family: Open Sans;
+  font-family: "Open Sans", "Inter", "Roboto", "Nunito Sans", sans-serif;
   font-size: 16px;
   font-weight: 500;
   line-height: 22px;
@@ -108,7 +108,7 @@ h6 {
 }
 
 p {
-  font-family: Open Sans;
+  font-family: "Open Sans", "Inter", "Roboto", "Nunito Sans", sans-serif;
   font-size: 18px;
   font-weight: 500;
   line-height: 25px;
