--- a/src/components/FrontPageFrame/Frame.css
+++ b/src/components/FrontPageFrame/Frame.css
@@ -10,3 +10,24 @@
   right: -1em;
   top: 121px;
 }
+
+@media (max-width: 768px) {
+  .frame {
+    right: -30px;
+    bottom: -30px;
+  }
+}
+
+@media (max-width: 480px) {
+  .frame {
+    right: -10px;
+    bottom: -10px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .frame {
+    right: -200px;
+    bottom: -100px;
+  }
+}
