--- a/src/components/ColorGrid/ColorItem.css
+++ b/src/components/ColorGrid/ColorItem.css
@@ -4,4 +4,13 @@
     border-radius: 50%;
     display: inline-block;
     margin-right: 15px;
+     margin-top: 15px;
+}
+
+.color-heading {
+     margin-bottom: 5px;  
+}
+
+.colorgrid {
+    max-width: 500px;
 }
