--- a/src/components/ImageItem/ImageItem.css
+++ b/src/components/ImageItem/ImageItem.css
@@ -1,42 +1,51 @@
 @import url(./../../index.css);
 
 .image-container {
-    position: relative;
-    display: inline-block;
-    margin: 2.5px;
-    cursor: pointer;
-  }
-  
+  position: relative;
+  display: inline-block;
+  margin: 2.5px;
+}
+
 .image {
-    height: 150px;
-    vertical-align: top;
-  }
+  height: 150px;
+  vertical-align: top;
+}
 
 .overlay {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    opacity: 0;
-    transition: opacity 0.3s ease;
-    background-color: var(--primary-black-66);
-    outline: 2px solid var(--primary-white);
-    outline-offset: -20px;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  background-color: var(--primary-black-66);
+  /*  outline: 2px solid var(--primary-white);
+    outline-offset: -20px; */
 }
 
 .image-container:hover .overlay {
-    opacity: 1;
-  }
+  opacity: 1;
+}
 
-  .text-overlay {
-    color: var(--primary-white);
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    text-align: center;
-    margin: 0;
-} 
+.text-overlay {
+  color: var(--primary-white);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
+  margin: 0;
+  cursor: pointer;
+}
+
+.favorite-icon-container {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  min-height: 25px;
+  min-width: 28px;
+  cursor: pointer;
+}
