--- a/src/components/FavoriteBoard/FavoriteBoard.css
+++ b/src/components/FavoriteBoard/FavoriteBoard.css
@@ -2,19 +2,20 @@
     background-color: var(--primary-white);
     width: 300px;
     position: sticky;
-    height: 100vh;
-    top: 0;
+    height: calc(100vh - 50px);
     left: calc(100vw - 300px);
+    padding-top: 50px;
     box-shadow: -5px 0px 5px 0px rgba(0,0,0,0.25);
+}
+
+.cross-container {
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 30px;
 }
 
 .cross {
     width: 25;
     height: 25;
-    position: absolute;
-    left: 81.73%;
-    right: 9.97%;
-    top: 7.29%;
-    bottom: 89.14%;
     cursor: pointer;
 }
