--- a/src/components/LabelButton/LabelButton.css
+++ b/src/components/LabelButton/LabelButton.css
@@ -1,6 +1,6 @@
 @import url(../../index.css);
 
-.label-button{
+.label-button-standard{
   display: flex;
   align-items: center;
   justify-content: center;
@@ -20,6 +20,25 @@
 
 .label-button:hover {
   opacity: 0.8;
+}
+
+.label-button-large{
+  display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: transparent;
+    position: relative;
+    text-shadow: none;
+    cursor: pointer;
+    box-shadow: none;
+    border: solid;
+    border-width: 2px;
+    width: 200px;
+    height: 50px;
+    margin-bottom: 20px;
+    margin-right: 15px;
+    margin-top: 50px;
+    color: var(--primary-black)
 }
 
 
