--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,9 +1,10 @@
 .navbar-container{
     display: flex;
     flex-direction: row;
-    width: 100%;
     justify-content: space-between;
     margin-top: 20px;
+    width: 100%;
+    height: 50px;
 }
 
 .rigt-side-icon-container{
