--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,22 +1,23 @@
-.navbar-container{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin-top: 20px;
-    width: 100%;
-    height: 50px;
+.navbar-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 20px;
+  width: 100%;
+  height: 50px;
+  position: fixed;
 }
 
-.rigt-side-icon-container{
-    margin-left: 40px;
-    width: 220px;
+.rigt-side-icon-container {
+  margin-left: 40px;
+  width: 220px;
 }
 
-.left-side-icon-container{
-    display: flex;
-    flex-direction: row;
-    align-items: end;
-    align-self: flex-end;
-    justify-self: flex-end;
-    justify-content: end;
+.left-side-icon-container {
+  display: flex;
+  flex-direction: row;
+  align-items: end;
+  align-self: flex-end;
+  justify-self: flex-end;
+  justify-content: end;
 }
