--- a/src/index.css
+++ b/src/index.css
@@ -115,3 +115,11 @@ p {
   letter-spacing: 0em;
   text-align: left;
 }
+
+.input-text {
+  font-family: "Open Sans", "Inter", "Roboto", "Nunito Sans", sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 22px;
+  letter-spacing: 0em;
+}
