can only click on the whole image

--- a/src/components/FullScreenImage/FullScreenImage.css
+++ b/src/components/FullScreenImage/FullScreenImage.css
@@ -9,7 +9,7 @@
 	color: var(--primary-white);
 	transform: translate3d(-50%, -50%, 0);
  	border-radius: 5px; 
- 	pointer-events: none;
+     pointer-events: none; /* makes sure it doesn't re-render and conflicts with onClick on mapper */
 	z-index: 1000;
 }
 
@@ -21,12 +21,15 @@
     margin: 0;
 }
 
-
 .favorite-icon-fullscreen {
     position: absolute;
     cursor: pointer;
     z-index:1001;
     display: flex;
     justify-content: right;
-    pointer-events: none; 
+     pointer-events: none;  /* makes sure it doesn't re-render and conflicts with onClick on mapper */
+}
+
+.favorite-icon-fullscreen img {
+    z-index:1002;
 }
