--- a/src/components/FilterFrame/FilterFrame.css
+++ b/src/components/FilterFrame/FilterFrame.css
@@ -1,12 +1,13 @@
 @import url(../../index.css);
 
 .filter-frame-container {
+  position: fixed;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 536px;
-  width: 250px;
+  width: 300px;
   left: -14px;
   top: 124px;
   border: solid;
@@ -15,7 +16,6 @@
   color: var(--primary-white);
   border-color: var(--primary-white);
   margin-left: -10px;
-  margin-top: 100px;
 }
 
 .filter-frame-button-container {
@@ -25,6 +25,7 @@
   height: 210px;
   width: 150px;
   padding-left: 16px;
+  padding-top: 20px;
 }
 
 .scroller {
