--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  padding-top: 20px;
+  padding-bottom: 30px;
 }
 
 .rigt-side-icon-container {
@@ -9,7 +11,7 @@
   flex-direction: row;
   align-items: end;
   margin-left: 40px;
-  width: 220px;
+  width: 150px;
 }
 
 .left-side-icon-container {
