--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -4,6 +4,7 @@
   justify-content: space-between;
   padding-top: 20px;
   padding-bottom: 30px;
+  margin-right: 42px;
 }
 
 .rigt-side-icon-container {
