--- a/src/screens/HomeScreen.css
+++ b/src/screens/HomeScreen.css
@@ -1,10 +1,11 @@
 @import url(../index.css);
 
-.heading-button-container{
-    display: flex;
-    flex-direction: column;
+.heading-button-container {
+  display: flex;
+  flex-direction: column;
 }
 
-.homepage-button-container{
-    margin-left: 50px;
+.homepage-button-container {
+  margin-top: 50px;
+  margin-left: 50px;
 }
