styling of profilepage

--- a/src/components/Profile/ProfileForm.css
+++ b/src/components/Profile/ProfileForm.css
@@ -10,6 +10,7 @@ input {
     border-width: 2px;
     height: 45px;
     margin-bottom: 25px;
+    min-width:445px;
 }
 
 form {
@@ -19,7 +20,7 @@ form {
     max-width: 445px;
     cursor:text;
     margin-bottom: 25px;
-    margin: 50px;
+    width: 100%;
 }
 
 .submit-button{
