--- a/src/App.css
+++ b/src/App.css
@@ -6,9 +6,11 @@ body {
 
 .favorite-list-container {
   position: fixed; /* set position to fixed */
-  left: 0;
+  display: flex;
+  justify-content: flex-end;
+  left: auto;
   right: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0.5);
+  width: fit-content;
   z-index: 20; /* set z-index to a higher value than the other components */
 }
