--- a/src/components/LabelButton/LabelButton.css
+++ b/src/components/LabelButton/LabelButton.css
@@ -10,12 +10,31 @@
   cursor: pointer;
   box-shadow: none;
   border: solid;
+  border-color: var(--primary-white);
   border-width: 2px;
   width: 125px;
   height: 50px;
   margin-bottom: 20px;
   margin-right: 15px;
   color: var(--primary-white);
+}
+
+.label-button-selected{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: white;
+    position: relative;
+    text-shadow: none;
+    cursor: pointer;
+    box-shadow: none;
+    border: solid;
+    border-width: 2px;
+    border-color: var(--primary-white);
+    width: 125px;
+    height: 50px;
+    margin-bottom: 20px;
+    margin-right: 15px;
 }
 
 .label-button:hover {
@@ -35,5 +54,4 @@
   border-width: 2px;
   width: 200px;
   height: 50px;
-  color: var(--primary-black);
 }
