--- a/src/index.css
+++ b/src/index.css
@@ -107,6 +107,15 @@ h6 {
   text-align: left;
 }
 
+.label-text-selected{
+  font-family: "Open Sans", "Inter", "Roboto", "Nunito Sans", sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 22px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+
 p {
   font-family: "Open Sans", "Inter", "Roboto", "Nunito Sans", sans-serif;
   font-size: 18px;
