--- a/src/components/LabelButton/LabelButton.css
+++ b/src/components/LabelButton/LabelButton.css
@@ -19,11 +19,15 @@
   color: var(--primary-white);
 }
 
+.label-button-standard:hover {
+  background-color: var(--primary-white-33);
+}
+
 .label-button-selected{
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: white;
+    background-color: var(--primary-white);
     position: relative;
     text-shadow: none;
     cursor: pointer;
@@ -54,4 +58,10 @@
   border-width: 2px;
   width: 200px;
   height: 50px;
+}
+
+.label-button-large:hover {
+  background-color: var(--primary-black);
+  color: var(--primary-white);
+  border: solid;
 }
