some resposinve login and homescreen

--- a/src/components/FrontPageFrame/Frame.css
+++ b/src/components/FrontPageFrame/Frame.css
@@ -1,14 +1,31 @@
-.frame-container {
-  position: fixed;
+/* .frame-container {
   width: 100%;
-}
+  height: 100%;
+  position: fixed;
+} */
 
 .frame {
   display: flex;
   flex-direction: row;
   border: 10px solid #101011;
   position: absolute;
-  height: 70vh;
-  width: 100vw;
-  right: -5em;
+  height: 80%;
+  width: calc(100% - 62px);
+  border-right-width: 0;
+  margin-left: 62px;
 }
+
+
+@media (max-height: 800px) {
+  .frame {
+    height: 70%; 
+    overflow-x: auto;
+  }
+}
+
+@media (max-width: 635px) {
+  .frame {
+    overflow-x: hidden;
+  }
+}
+
