--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 @import url(./index.css);
 
-body {
-  margin: 0;
+.screens {
+padding: 50px;
+background-color: aqua;
 }
 
 .favorite-list-container {
