Search screen step1

--- a/src/components/FilterFrame/FilterFrame.css
+++ b/src/components/FilterFrame/FilterFrame.css
@@ -1,18 +1,15 @@
 @import url(../../index.css);
 
 .filter-frame-container {
-  position: fixed;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 536px;
   width: 300px;
-  left: -14px;
-  top: 124px;
   border: solid;
   border-width: 10px;
-  border-left: 10px;
+  border-left-width: 0px;
   color: var(--primary-white);
   border-color: var(--primary-white);
   margin-left: -10px;
