--- a/src/screens/SearchScreen.css
+++ b/src/screens/SearchScreen.css
@@ -1,29 +1,12 @@
 @import url(../index.css);
 
-/* .screen-container{
-    display: flex;
-    flex-direction: row;
+
+
+.search-screen-left {
+  position: fixed;
+
 }
 
-.scroll-container{
-    margin-left: 50px;
-    margin-top: 20px;
-} */
-
-.search-component-container {
-  display: flex;
-  flex-direction: row;
-}
-
-.image-grid-container-padding {
-  margin-left: 50px;
-  width: 1100px;
-}
-
-.sticky-container {
-  position: -webkit-sticky;
-  position: sticky;
-  width: 300px;
-  height: 500px;
-  top: 0;
+.search-screen-right {
+margin-left: 300px;
 }
