--- a/src/components/FilterFrame/FilterFrame.css
+++ b/src/components/FilterFrame/FilterFrame.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 300px;
+  width: 250px;
   border: solid;
   border-width: 10px;
   border-left-width: 0px;
@@ -12,7 +12,7 @@
   border-color: var(--primary-white);
   padding: 50px 10px 50px 10px;
   height: calc(100vh - 300px);
-  z-index: 15
+  z-index: 15;
 }
 
 .filter-frame-button-container {
@@ -32,7 +32,7 @@
   margin-top: 50px;
 }
 
-@media (max-width: 500px) {
+@media (max-width: 600px) {
   .filter-frame-container {
     display: flex;
     flex-direction: column;
@@ -62,4 +62,15 @@
   margin-right: 10px;
   margin-left: 10px;
 }
+}
+
+@media (max-height: 400px) {
+  .filter-frame-container{
+    padding: 30px 10px 30px 10px;
+    height: calc(100vh - 250px);
+    width: 220px;
+  }
+  .filter-frame-allbuttons-container {
+    margin-top: 25px;
+  }
 }
