--- a/src/screens/SearchScreen.css
+++ b/src/screens/SearchScreen.css
@@ -6,14 +6,14 @@
 }
 
 .search-screen-right {
-margin-left: 340px;
+margin-left: 300px;
+margin-right: 10px;
 }
 
-@media (max-width: 500px) {
+@media (max-width: 600px) {
   .search-screen {
     display: flex;
     flex-direction: column;
-
   }
 
   .search-screen-right {
