--- a/src/components/Profile/ProfileHeader.css
+++ b/src/components/Profile/ProfileHeader.css
@@ -2,7 +2,7 @@
 .profile-header {
     display: flex;
     flex-direction: row;
-    margin-bottom: 20px;
+    margin-bottom: 50px;
     align-items: center;
 }
 
@@ -36,7 +36,7 @@
     text-align: left;
     margin: 0px;
     height: auto;
-    margin-left: 38px;
+    margin-left: 30px;
 /*     border: 2px solid transparent; */
 }
 
@@ -50,11 +50,12 @@
 
 
 
-/* Media query for responsiveness */
-@media screen and (min-height: 600px) {
+
+@media (max-height: 750px) {
     .profile-header {
         flex-direction: row;
-        margin-bottom: 27px
+        margin-bottom: 30px;
+        margin-top: -10px;
     }
     .profile-circle {
         width: 60px; 
