--- a/src/screens/ProfileScreen.css
+++ b/src/screens/ProfileScreen.css
@@ -3,3 +3,9 @@
     flex-direction: column;
     margin: 50px 0px 0px 50px;
 }
+
+.login-info {
+    max-width: 445px;
+    margin: 0;
+    width:100%;
+}
