--- a/src/screens/CanvasScreen.css
+++ b/src/screens/CanvasScreen.css
@@ -3,6 +3,15 @@
   padding: 0 50px 0 50px;
 }
 
+.fav-grid-container {
+  display: flex;
+  justify-content: center;
+  width: 200px;
+  height: 539px;
+  border: solid 2px black;
+  margin-right: 32px;
+}
+
 .generate-image-container {
   display: flex;
   flex-direction: column;
