--- a/src/components/Canvas/Konva.css
+++ b/src/components/Canvas/Konva.css
@@ -5,7 +5,12 @@
   box-sizing: border-box;
   width: 512px;
   height: 512px;
-  top: 125px;
   border: 10px solid #101011;
-  z-index: 100px;
+}
+
+@media (min-height: 1024px) {
+  .konva-container {
+    width: 1024px;
+    height: 1024px;
+  }
 }
