--- a/src/components/FilterFrame/FilterFrame.css
+++ b/src/components/FilterFrame/FilterFrame.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 250px;
+  width: 220px;
   border: solid;
   border-width: 10px;
   border-left-width: 0px;
@@ -67,6 +67,20 @@
 @media (max-height: 400px) and (max-height: 700px) {
   .filter-frame-container{
     padding: 30px 10px 30px 10px;
+    height: calc(100vh - 250px);
+    width: 220px;
+  }
+  .filter-frame-allbuttons-container {
+    margin-top: 25px;
+  }
+}
+
+@media (max-height: 800px) {
+  h1 {
+    font-size: 40px;
+  }
+  .filter-frame-container{
+    padding: 20px 10px 30px 10px;
     height: calc(100vh - 250px);
     width: 220px;
   }
