--- a/src/screens/CanvasScreen.css
+++ b/src/screens/CanvasScreen.css
@@ -1,21 +1,20 @@
 .canvas-screen-container {
   display: flex;
-  padding: 0 50px 0 50px;
+  margin: 0 50px 50px 50px;
+  height: calc(100vh - 170px)
 }
 
 .fav-grid-container {
   display: flex;
   justify-content: center;
-  width: 200px;
-  height: 539px;
   border: solid 2px black;
-  margin-right: 32px;
+  margin-right: 50px;
 }
 
 .generate-image-container {
   display: flex;
   flex-direction: column;
-  margin-left: 32px;
+  margin-left: 50px;
 }
 
 .label-button-container {
