--- a/src/components/Canvas/Konva.css
+++ b/src/components/Canvas/Konva.css
@@ -2,11 +2,20 @@
   display: flex;
   align-items: center;
   flex-direction: row;
-  box-sizing: border-box;
   width: 512px;
   height: 512px;
+}
+
+ .konvajs-content {
+  width: 512px;
+  height: 512px;
+  margin-top: 20px;
+}
+
+.konva-frame {
   border: 10px solid #101011;
 }
+
 
 @media (min-height: 1024px) {
   .konva-container {
