sizes work based on dimensions

--- a/src/components/Canvas/Konva.css
+++ b/src/components/Canvas/Konva.css
@@ -9,17 +9,25 @@
  .konvajs-content {
   width: 512px;
   height: 512px;
-  margin-top: 20px;
 }
 
 .konva-frame {
   border: 10px solid #101011;
 }
 
-
 @media (min-height: 1024px) {
   .konva-container {
     width: 1024px;
     height: 1024px;
+  }
+
+  .konvajs-content {
+    width: 1024px !important;
+    height: 1024px !important;
+  }
+
+  canvas {
+    width: 1024px !important;
+    height: 1024px !important;
   }
 }
