--- a/src/components/Canvas/Konva.css
+++ b/src/components/Canvas/Konva.css
@@ -15,6 +15,26 @@
   border: 10px solid #101011;
 }
 
+.ripple-effect {
+  margin-top: 4rem;
+  position: relative;
+  display: inline-block;
+  width: 200px;
+  height: 200px;
+}
+
+.ripple-effect div {
+  position: absolute;
+  border: 4px solid black;
+  opacity: 1;
+  border-radius: 50%;
+  animation: ripple-effect 1s cubic-bezier(0, 0, 1, 1) infinite;
+}
+
+.ripple-effect div:nth-child(2) {
+  animation-delay: -0.5s;
+}
+
 @media (min-height: 1024px) {
   .konva-container {
     width: 1024px;
