little border edits

--- a/src/components/LabelButton/LabelButton.css
+++ b/src/components/LabelButton/LabelButton.css
@@ -62,4 +62,6 @@
   background-color: var(--primary-black);
   color: var(--primary-white);
   border: solid;
+  border-width: 2px;
+  border-color: var(--primary-black);
 }
