--- a/src/screens/CanvasScreen.css
+++ b/src/screens/CanvasScreen.css
@@ -2,34 +2,53 @@
   display: flex;
   margin: 0 50px 50px 50px;
   /* height: calc(100vh - 170px) */
-  justify-content: space-between;
+  background-color: red;
 }
 
 .fav-grid-container {
   display: flex;
-  justify-content: center;
+  flex: 1;
+  justify-content: left;
   border: solid 2px black;
-  margin-right: 50px;
+  margin-right: 30px;
   height: 530px;
+  background-color: aqua;
 }
 
 .generate-image-container {
   display: flex;
   flex-direction: column;
-  margin-left: 50px;
-  height: 530px;
+  margin-left: 30px;
+  width: 250px;
+  background-color: blueviolet;
 }
 
-.label-button-container {
-  margin-top: 30px;
+.all-canvas-buttons-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  height: 100%;
 }
 
-.download-image-button-container {
-  margin-top: 11px;
+.small-canvas-buttons-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 10px;
 }
 
-.clear-canvas-button {
-  margin-top: 60px;
+.references-title {
+  font-weight: bold;
+  font-size: 16px;
+  margin-top: 20px;
+  margin-bottom: 0px;
+}
+
+.artist-and-title-references {
+  font-size: 13px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  line-height: 21px;
 }
 
 @media screen and (min-height: 1024px) {
