--- a/src/screens/PaintingScreen.css
+++ b/src/screens/PaintingScreen.css
@@ -1,7 +1,7 @@
 @import url(../index.css);
 
 .paintingScreen {
-    padding: 0 50px 0 50px;
+    padding: 0 50px 50px 50px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
