--- a/src/components/TextBox/TextBox.css
+++ b/src/components/TextBox/TextBox.css
@@ -4,7 +4,7 @@ textarea {
   box-sizing: border-box;
   white-space: normal;
   width: 100%;
-  height: 140px;
+  min-height: 140px;
   padding: 10px;
   overflow-wrap: break-word;
   border: solid 2px black;
