--- a/src/screens/HomeScreen.css
+++ b/src/screens/HomeScreen.css
@@ -3,20 +3,31 @@
 .homescreen {
   display: flex;
   flex-direction: row;
-  width: calc(100vw - 60px);
+  justify-content: space-between;
+  width: calc(100vw - 70px);
   padding: 50px;
 }
 
 .left-heading-container {
+  position: absolute;
   display: flex;
   flex-direction: column;
-  max-width: 400px;
+  width: 400px;
+  height: 100%;
+  z-index: 102;
+}
+
+.pageheading-container-homescreen {
+  background-color: white;
 }
 
 .homepage-button-container {
-  margin-top: 50px;
-  margin-bottom: 20px;
-  margin-right: 15px;
+  padding-top: 50px;
+  padding-bottom: 20px;
+  padding-right: 15px;
+  background-color: white;
+  width: 300px;
+  flex: 1;
 }
 
 
