--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -32,10 +32,10 @@ align-items: center;
 .left-side-icon-container {
   display: flex;
   flex-direction: row;
-  align-items: end;
+  align-items: flex-end;
   align-self: flex-end;
   justify-self: flex-end;
-  justify-content: end;
+  justify-content: flex-end;
 }
 
 .SMK-logo-small {
