--- a/src/screens/HomeScreen.css
+++ b/src/screens/HomeScreen.css
@@ -13,7 +13,7 @@
   display: flex;
   flex-direction: column;
   width: 401px;
-  height: 80%;
+  height: calc(100vh - 290px);
   z-index: 102;
   background-color: white; 
 }
