--- a/src/screens/CanvasScreen.css
+++ b/src/screens/CanvasScreen.css
@@ -24,10 +24,17 @@
   display: flex;
   flex-direction: row;
   margin-top: 10px;
+  justify-content: space-between;
+}
+
+.explore-button {
+  width: 50%;
+  margin-right: 5px;
 }
 
 .example-button {
-  margin-left: 10px;
+  width: 50%;
+  margin-left: 5px;
 }
 
 .references {
