--- a/src/components/LabelButton/LabelButton.css
+++ b/src/components/LabelButton/LabelButton.css
@@ -1,5 +1,25 @@
 @import url(../../index.css);
 
+.label-button-small {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: transparent;
+  position: relative;
+  text-shadow: none;
+  cursor: pointer;
+  box-shadow: none;
+  border: solid;
+  border-color: var(--primary-white);
+  border-width: 2px;
+  width: 90px;
+  height: 40px;
+  margin-bottom: 20px;
+  color: var(--primary-white);
+  font-size: x-small;
+}
+
+
 .label-button-standard {
   display: flex;
   align-items: center;
