--- a/src/components/ImageItem/ImageItem.css
+++ b/src/components/ImageItem/ImageItem.css
@@ -41,7 +41,7 @@
   text-align: center;
   margin: 0;
   cursor: pointer;
-  font-size: x-small;
+  font-size: medium;
   line-height: normal;
   font-style: italic;
 }
