--- a/src/screens/HomeScreen.css
+++ b/src/screens/HomeScreen.css
@@ -12,7 +12,7 @@
   position: absolute;
   display: flex;
   flex-direction: column;
-  width: 401px;
+  width: 431px;
   height: 100%;
   z-index: 102;
   background-color: white; 
@@ -26,6 +26,7 @@
   padding-bottom: 20px;
   padding-right: 15px;
   background-color: white;
+  margin-top: 15px;
   width: 300px;
   flex: 1;
 }
